@@ -10,18 +10,18 @@ DIST jdk-6-dlj-linux-amd64.bin 56347832 RMD160 b4d12bf55ea6baa465c227cff2d314d26
 DIST jdk-6-dlj-linux-i586.bin 62718862 RMD160 4ff9f1f82b20f0dbd792e6765c02d87749e00aac SHA1 bc7a56952b362e472a0ec179e0852ca7bf0c0507 SHA256 1c4f98edb6c1b379807d9dab61971c0271b2b4cf1f1be914cc85354744408467
 DIST jdk-7-ea-bin-b03-linux-amd64-30_nov_2006.bin 56270345 RMD160 dc3f1b4a8038371bbbf3d5bc711720c1fa4fce11 SHA1 7e1192fa22d31d68cc0c40ef7dec4c2bf6c6a847 SHA256 b5e3a0e23515fb328244c8db75eef41254efa340d3ffee808cdc70a8306db3f4
 DIST jdk-7-ea-bin-b03-linux-i586-30_nov_2006.bin 62614852 RMD160 93a74fbf38670c7bcdec5b31893f7e742447e723 SHA1 63fc0a4218866ba646e906fb5c4ed5371056ff71 SHA256 ba4dd9b1756d9731e7924ee915847e7544ef1853d008b7b33eadbb30dc61c344
-EBUILD sun-jdk-1.6.0.ebuild 4559 RMD160 961b19d9d73f28ff05fe15de9724591ca309566f SHA1 eec1c2b83679c00c94a10c4f0b3d2bedc351e076 SHA256 ac19ad6f549df7cf87b490017c4dcbc2ee2b70767d031bd0dac02cc9f439c554
-MD5 d1ed46c65c445a4b3076cc4ce0443c00 sun-jdk-1.6.0.ebuild 4559
-RMD160 961b19d9d73f28ff05fe15de9724591ca309566f sun-jdk-1.6.0.ebuild 4559
-SHA256 ac19ad6f549df7cf87b490017c4dcbc2ee2b70767d031bd0dac02cc9f439c554 sun-jdk-1.6.0.ebuild 4559
+EBUILD sun-jdk-1.6.0.ebuild 4638 RMD160 2f7d3966ac31398f6c1ab0e03f0059229507483f SHA1 3406622d327262e2b1234b47ed8fd0cbeb68b331 SHA256 3d1509dfb6de7989ffb19d0183ed89fe6383d7d06cdb394fc74986b4b48ad84e
+MD5 91d6c0f3dea9fdee1481de4c1086c018 sun-jdk-1.6.0.ebuild 4638
+RMD160 2f7d3966ac31398f6c1ab0e03f0059229507483f sun-jdk-1.6.0.ebuild 4638
+SHA256 3d1509dfb6de7989ffb19d0183ed89fe6383d7d06cdb394fc74986b4b48ad84e sun-jdk-1.6.0.ebuild 4638
 EBUILD sun-jdk-1.7.0.0_alpha03.ebuild 5356 RMD160 cac745edfb5fd9fdb92d90ea85d40fe752c1e476 SHA1 2ceeff202778d9d067657cd7e8e619dfdc8493ca SHA256 4ee7564c1827719456db6aae968b7c1439089297492a691f4b11b947c5af07e3
 MD5 d669fe5a934dd3a7f6aa4bd25d11248c sun-jdk-1.7.0.0_alpha03.ebuild 5356
 RMD160 cac745edfb5fd9fdb92d90ea85d40fe752c1e476 sun-jdk-1.7.0.0_alpha03.ebuild 5356
 SHA256 4ee7564c1827719456db6aae968b7c1439089297492a691f4b11b947c5af07e3 sun-jdk-1.7.0.0_alpha03.ebuild 5356
-MISC ChangeLog 1481 RMD160 32ec6524825fcef4b5bfd57530a7cd4d95c7a38b SHA1 9f9624326e7743037b1a0f3d164897f6df3eda9a SHA256 a1eb719faf0d57291eec8be8b7f65335f9807b9905f6dff4405ae228f98db4b2
-MD5 470960948d4838f37e1cb0aadd576f83 ChangeLog 1481
-RMD160 32ec6524825fcef4b5bfd57530a7cd4d95c7a38b ChangeLog 1481
-SHA256 a1eb719faf0d57291eec8be8b7f65335f9807b9905f6dff4405ae228f98db4b2 ChangeLog 1481
+MISC ChangeLog 1605 RMD160 52458caf83f7504d822b0ef886e8b47e5d3693cc SHA1 054985b60edbe3ff5aea4c15f7b8ff1385e2b571 SHA256 d01eccf525140546f96b5a1a04a1362bc0b265f13d455fbf3a678704cac8b210
+MD5 b37a499f5c52715915fc1dea2c0ba3d0 ChangeLog 1605
+RMD160 52458caf83f7504d822b0ef886e8b47e5d3693cc ChangeLog 1605
+SHA256 d01eccf525140546f96b5a1a04a1362bc0b265f13d455fbf3a678704cac8b210 ChangeLog 1605
 MD5 7cca7ffac6725b17472340fe8db317f6 files/digest-sun-jdk-1.6.0 521
 RMD160 7329a96c4622d1ea677604d88299616019b8f1d2 files/digest-sun-jdk-1.6.0 521
 SHA256 d5cebb938ce9873bffbdee08dfc2d4e46c0984e6d420221916b9acd94a0118c4 files/digest-sun-jdk-1.6.0 521
