@@ -2,6 +2,9 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Dec 2006; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0.ebuild:
+  Fixed jce/doc dependencies and QA_TEXTRELS_x86.
+
   04 Dec 2006; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.5.0.10.ebuild,
   -files/sun-jdk-1.5.env, -sun-jdk-1.7.0.0_alpha02.ebuild,
   +sun-jdk-1.7.0.0_alpha03.ebuild:
